[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nodetool-lib-data"
version = "0.6.0"
description = "Nodetool nodes for data processing."
readme = "README.md"
authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
packages = [{ include = "nodetool", from = "src" }]
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }

langchain-text-splitters = "0.3.4"
llama-index = "0.12.13"
llama-index-embeddings-ollama = "0.5.0"
numpy = "1.26.4"
pandas = "2.2.3"
matplotlib = "3.9.2"
seaborn = "0.13.2"
